trying to squash mobile style bug

--- a/src/Components/Header-Footer/Header.scss
+++ b/src/Components/Header-Footer/Header.scss
@@ -114,6 +114,7 @@
         }
         &.account-button {
             img {
+                max-height:100%;
                 border-radius:5px;
                 transition:.2s;
                 -webkit-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.25);
